fix: -1 in boxGenerator

--- a/data_analysis/BoxGenerator.ipynb
+++ b/data_analysis/BoxGenerator.ipynb
@@ -35,9 +35,10 @@
     "\n",
     "        print(s)\n",
     "\n",
-    "        box.write(str(n - 1) + '\\n\\n')\n",
+    "        box.write(str(n) + '\\n\\n')\n",
     "        box.write(s)\n",
     "        box.close()\n",
+    "\n",
     "\n",
     "generate_box(240, 90, 10)\n"
    ],
